join password rule apply and file upload and download complete

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/Activity/list=UTF-8
 encoding//WebContent/Activity/menu=UTF-8
+encoding//WebContent/Board/Calendar.jsp=UTF-8
 encoding//WebContent/Board/list=UTF-8
 encoding//WebContent/Board/menu=UTF-8
 encoding//WebContent/Index/index.jsp=UTF-8
